<resources>
    <string name="app_name">proyectoFinalNE</string>
    <string name="agrandar_texto">agrandar texto</string>
    <string name="escribe_aqu_o_presiona_el_microfono">Escribe aquí o presiona el microfono</string>
    <string name="aumentar_tama_o_de_texto">aumentar tamaño de texto</string>
    <string name="grabar_audio">grabar audio</string>
    <string name="escuchar_texto">escuchar texto</string>
    <string name="reducir_tama_o_del_texto">reducir tamaño del texto</string>
</resources>